{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 50,
  "lineage": "acb52587-e727-4174-5cf3-9a06608e94b5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:listener/app/threatmod-alb/fe382030394a496f/42b0cd8922c83d3c",
            "certificate_arn": "arn:aws:acm:eu-west-2:666109694156:certificate/c7ef0427-b901-4c9d-816c-94f57c7f0edc",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:targetgroup/threatmod-target-group/3934ea6103d679fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:listener/app/threatmod-alb/fe382030394a496f/42b0cd8922c83d3c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:loadbalancer/app/threatmod-alb/fe382030394a496f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:listener/app/threatmod-alb/fe382030394a496f/42b0cd8922c83d3c"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.acm.aws_acm_certificate_validation.val",
            "module.acm.aws_route53_record.r53",
            "module.acm.data.aws_route53_zone.zone",
            "module.alb.aws_alb_target_group.app",
            "module.alb.aws_lb.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:listener/app/threatmod-alb/fe382030394a496f/202f8a99e8a15864",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:listener/app/threatmod-alb/fe382030394a496f/202f8a99e8a15864",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:loadbalancer/app/threatmod-alb/fe382030394a496f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:listener/app/threatmod-alb/fe382030394a496f/202f8a99e8a15864"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:targetgroup/threatmod-target-group/3934ea6103d679fc",
            "arn_suffix": "targetgroup/threatmod-target-group/3934ea6103d679fc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:targetgroup/threatmod-target-group/3934ea6103d679fc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:666109694156:loadbalancer/app/threatmod-alb/fe382030394a496f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "threatmod-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:targetgroup/threatmod-target-group/3934ea6103d679fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:loadbalancer/app/threatmod-alb/fe382030394a496f",
            "arn_suffix": "app/threatmod-alb/fe382030394a496f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "threatmod-alb-2103012445.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:loadbalancer/app/threatmod-alb/fe382030394a496f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "threatmod-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-0cc19b7c3a5942ef8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d97ed09c7bcd61cd"
              },
              {
                "subnet_id": "subnet-0ded7bb6791561f92"
              }
            ],
            "subnets": [
              "subnet-0d97ed09c7bcd61cd",
              "subnet-0ded7bb6791561f92"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0b5c940cd44d61611",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:666109694156:loadbalancer/app/threatmod-alb/fe382030394a496f"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group/sg-0cc19b7c3a5942ef8",
            "description": "Controls access to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc19b7c3a5942ef8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "666109694156",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-secgroup"
            },
            "tags_all": {
              "Name": "alb-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sg-0cc19b7c3a5942ef8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group-rule/sgr-070f532f51b303430",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-070f532f51b303430",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0cc19b7c3a5942ef8",
            "security_group_rule_id": "sgr-070f532f51b303430",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sgr-070f532f51b303430",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group-rule/sgr-06bdd303743c6331c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06bdd303743c6331c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0cc19b7c3a5942ef8",
            "security_group_rule_id": "sgr-06bdd303743c6331c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sgr-06bdd303743c6331c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group-rule/sgr-09fa4fdbf638e27df",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-09fa4fdbf638e27df",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0cc19b7c3a5942ef8",
            "security_group_rule_id": "sgr-09fa4fdbf638e27df",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sgr-09fa4fdbf638e27df",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group/sg-0941024e2e78389ee",
            "description": "Allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0941024e2e78389ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc19b7c3a5942ef8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "666109694156",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-secgroup"
            },
            "tags_all": {
              "Name": "alb-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sg-0941024e2e78389ee",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group-rule/sgr-0f1568af10fda116b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f1568af10fda116b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0941024e2e78389ee",
            "security_group_rule_id": "sgr-0f1568af10fda116b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sgr-0f1568af10fda116b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.ecs.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:security-group-rule/sgr-0054c40ffe559ddc2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0054c40ffe559ddc2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0cc19b7c3a5942ef8",
            "region": "eu-west-2",
            "security_group_id": "sg-0941024e2e78389ee",
            "security_group_rule_id": "sgr-0054c40ffe559ddc2",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "sgr-0054c40ffe559ddc2",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.ecs.aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:internet-gateway/igw-037da6c1a5be5aafb",
            "id": "igw-037da6c1a5be5aafb",
            "owner_id": "666109694156",
            "region": "eu-west-2",
            "tags": {
              "Name": "ig"
            },
            "tags_all": {
              "Name": "ig"
            },
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:route-table/rtb-04dfcbed77c8565c4",
            "id": "rtb-04dfcbed77c8565c4",
            "owner_id": "666109694156",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037da6c1a5be5aafb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "tags_all": {
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "rtb-04dfcbed77c8565c4",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cefbdd08de1a217b",
            "region": "eu-west-2",
            "route_table_id": "rtb-04dfcbed77c8565c4",
            "subnet_id": "subnet-0d97ed09c7bcd61cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0337cf4aa1b04fa85",
            "region": "eu-west-2",
            "route_table_id": "rtb-04dfcbed77c8565c4",
            "subnet_id": "subnet-0ded7bb6791561f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:subnet/subnet-04c635105e8ccaa7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c635105e8ccaa7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666109694156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "subnet-04c635105e8ccaa7b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:subnet/subnet-05d321ec8fa37414b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d321ec8fa37414b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666109694156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "subnet-05d321ec8fa37414b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:subnet/subnet-0d97ed09c7bcd61cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d97ed09c7bcd61cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666109694156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "subnet-0d97ed09c7bcd61cd",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:subnet/subnet-0ded7bb6791561f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded7bb6791561f92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666109694156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0b5c940cd44d61611"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "subnet-0ded7bb6791561f92",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:666109694156:vpc/vpc-0b5c940cd44d61611",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ab15b9ca4ffd1869",
            "default_route_table_id": "rtb-07dd2ded8e698219f",
            "default_security_group_id": "sg-087f0195cc2aa48e0",
            "dhcp_options_id": "dopt-0d49fd4b444169e97",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5c940cd44d61611",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07dd2ded8e698219f",
            "owner_id": "666109694156",
            "region": "eu-west-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "666109694156",
            "id": "vpc-0b5c940cd44d61611",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}